--- a/secretsanta/style.css
+++ b/secretsanta/style.css
@@ -7,8 +7,8 @@
 }
 
 main {
-    margin-left: 2.5%;
-    margin-right: 2.5%;
+    margin-left: 5%;
+    margin-right: 5%;
 }
 
 header {
@@ -41,8 +41,7 @@ header {
 .item {
     display: flex;
     flex-direction: column;
-    width: 15%;
-    height: 15%;
+    width: 15rem;
     margin-bottom: 1rem;
     text-decoration: none;
 }
@@ -56,7 +55,7 @@ header {
     display: flex;
     flex-wrap: wrap;
     flex-direction:row;
-    gap: 2.5%;
+    gap: 2rem;
 }
 
 .thumbnail {
