--- a/yorku/desn3001/style.css
+++ b/yorku/desn3001/style.css
@@ -78,6 +78,7 @@
 .legend {
    margin-bottom: 1rem;
    font-size: 1.25rem;
+   cursor: pointer;
 }
 
 .bottomHUD {
@@ -113,7 +114,7 @@
 
 .lineDrawing {
     margin-top: 8.5rem;
-    margin-left: 60rem;
+    margin-left: 75rem;
     display: flex;
     flex-direction: row;
     width: 100vw;
@@ -122,13 +123,13 @@
 .line {
     position: absolute;
     stroke-linecap: round;
-    padding-right: 25rem;
+    padding-right: 0rem;
 }
 
 .lineAlt {
   position: absolute;
   stroke-linecap: round;
-  padding-right: 25rem;
+  padding-right: 0rem;
 }
 
 .line2 {
@@ -261,6 +262,32 @@
 /* dot-id file for positioning */
 /* dot-id file for image */
 
+.underlineEffect:hover {
+  text-decoration: underline;
+}
+
+.legendImage {
+  position: fixed;
+  inset: 0;
+  z-index: 10;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: rgba(0, 0, 0, 0.85);
+  backdrop-filter: blur(8px);          
+  -webkit-backdrop-filter: blur(8px);   
+  
+  padding: 1.5rem;
+}
+
+.legendImage img {
+  max-width: 95%;
+  max-height: 95%;
+  box-shadow: 0 8px 20px rgba(0, 0, 0, 0.5);   
+  cursor: pointer;
+}
+
+
 /* Base styles */
 body {
     width: auto;
@@ -294,10 +321,12 @@ figure {
 blockquote {
   margin: 0;
   padding: 0;
-  font-style: normal; /* removes italic */
-  border: none;       /* removes any default border */
-  background: none;   /* removes any default background */
+  font-style: normal; 
+  border: none;      
+  background: none;  
 }
+
+
 
 /* Navigation Bar Scroll Animation */
 .title--hidden {
@@ -377,5 +406,42 @@ blockquote {
   }
 }
 
-@media (max-width: 768px) {
+.transparentItem {
+  opacity: 20%;
+}
+
+.activeItem {
+  opacity: 100%;
+}
+
+.activeAll {
+  opacity: 100%;
+}
+
+.selectedIndicator {
+  color: black;
+  text-decoration: underline;
+}
+
+/* scroll bar */
+
+::-webkit-scrollbar {
+ background-color: transparent;
+}
+
+::-webkit-scrollbar:horizontal {
+  height: 8px;
+}
+
+::-webkit-scrollbar:vertical {
+  width: 0px;
+}
+
+::-webkit-scrollbar-thumb {
+ background-color: rgba(53, 46, 46, 0.4);
+ border-radius: 2px;
+}
+
+::-webkit-scrollbar-thumb:hover {
+ background-color: rgba(53, 46, 46, 0.75);
 }
