--- a/yorku/desn3005/siaff/style.css
+++ b/yorku/desn3005/siaff/style.css
@@ -350,12 +350,11 @@
 }
 
 #award-margins {
-    margin-top: 3rem;
-    margin-bottom: 3rem;
     margin-right: 4rem;
     margin-left: 4rem;
     display: flex;
     flex-direction: row;
+    gap: .5rem;
 }
 
 #progressbar {
@@ -375,6 +374,8 @@
 
 #award-left, #award-right {
     flex: 1;
+    margin-top: 3rem;
+    margin-bottom: 3rem;    
 }
 
 #award-center {
@@ -406,6 +407,11 @@
     color: black;
     margin-left: auto;
     margin-top: 1.75rem;
+}
+
+#award1 {
+    width: 100%;
+    height: 100%;
 }
 
 @media (max-width: 1024px) {
