--- a/yorku/desn3005/siaff/style.css
+++ b/yorku/desn3005/siaff/style.css
@@ -385,21 +385,44 @@
 #award-left {
     display: flex;
     flex-direction: column;
-    gap: 60vh;
+    justify-content: space-between;
 }
 
-#award-right h2 {
+#award-right {
+    display: flex;
+    flex-direction: column;    
+    gap: 40vh;
+}
+
+#awardheader-right h2 {
     color: white;
     text-align: right;
     font-size: 4rem;
     white-space: nowrap;
 }
 
-#award-right p {
+#awardheader-right p {
     color: white;
     text-align: right;
     font-size: 1.5rem;
     white-space: nowrap;
+}
+
+.qrCode {
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    color: white;
+    text-align: right;
+    align-items: flex-end;
+    justify-content: flex-end;
+    gap: 1rem;
+}
+
+.qrCode img {
+    width: 30%;
+    padding: .25rem;
+    border: #1B1BFF 2px solid;
 }
 
 #btn-style2 {
@@ -412,6 +435,19 @@
 #award1 {
     width: 100%;
     height: 100%;
+}
+
+/* ROTATION ANIMATION */
+
+.switch-model1, .switch-model2, .switch-model3 {
+    opacity: 1;
+    transition: opacity 0.8s ease;
+}
+
+/* Hidden state */
+.hidden {
+    opacity: 0;
+    pointer-events: none;
 }
 
 @media (max-width: 1024px) {
