--- a/yorku/desn3005/siaff/fonts/stylesheet.css
+++ b/yorku/desn3005/siaff/fonts/stylesheet.css
@@ -61,3 +61,11 @@
     font-display: swap;
 }
 
+@font-face {
+    font-family: 'Source Han Sans KR Normal';
+    src: url('SourceHanSansKR-Normal-Alphabetic.woff2') format('woff2'),
+        url('SourceHanSansKR-Normal-Alphabetic.woff') format('woff');
+    font-weight: normal;
+    font-style: normal;
+    font-display: swap;
+}
