--- a/yorku/desn3005/siaff/style.css
+++ b/yorku/desn3005/siaff/style.css
@@ -50,7 +50,7 @@
     text-decoration-thickness: .10rem;
 }
 
-#register {
+.button-white {
     background-color: #ffffff;
     padding-top: .75rem;
     padding-bottom: .5rem;
@@ -59,7 +59,7 @@
     border-radius: 2rem;
 }
 
-#register a {
+.button-white a {
     color: #000000;
 }
 
@@ -360,20 +360,7 @@
     gap: .5rem;
 }
 
-#progressbar {
-    gap: .5rem;
-    white-space: nowrap;
-}
 
-.bar {
-    border-radius: 1rem;
-    display: inline-block;
-    flex: 0 0 auto;
-    width: 10%;
-    height: 4px;
-    background-color: #D9D9D9;
-    transition: background-color 0.8s ease, width 0.8s ease;
-}
 
 #award-left, #award-right {
     flex: 1;
@@ -546,6 +533,171 @@
 
 #view-more:hover {
     background-color: #D9D9D9;
+}
+
+/* booth section */
+
+#booths {
+    background-color: white;
+}
+
+#boothContainer {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+#booth-box {
+    background-color: #232323;
+    border:#1B1BFF 4px solid;
+    height: 100%;
+    width: 100%;
+}
+
+#booth-margins {
+    margin-right: 4rem;
+    margin-left: 4rem;
+    margin-top: 3rem;
+    margin-bottom: 3rem;    
+    display: flex;
+    flex-direction: row;
+    gap: .5rem;
+}
+
+.giveawayboothImg {
+    width: 100%;
+    height: auto;
+}
+
+#booth-left {
+    flex: 60;    
+}
+
+#booth-right {
+    flex: 26;
+}
+
+#booth-center {
+    flex: 14;
+}
+
+#booth-left {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    gap: 2rem;
+}
+
+.rotating-progressbar {
+    display: flex;
+    width: 100%;
+    gap: .25rem;
+}
+
+/* Outer bar */
+.bar {
+    height: 4px;
+    background-color: #D9D9D9;
+    border-radius: 8px;
+    position: relative;
+    overflow: hidden;
+    transition: width 1s ease; /* smooth size switching */
+}
+
+/* Inner fill that animates only in the active bar */
+.fill {
+    height: 100%;
+    width: 0%;
+    background-color: #FF0000;
+    border-radius: 8px;
+}
+
+
+#booth-right {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
+
+#boothheader-right h2 {
+    color: white;
+    text-align: left;
+    font-size: 4rem;
+    white-space: nowrap;
+}
+
+.boothParagraph {
+    color: white;
+    font-size: 1.25rem;
+    text-align: justify;
+}
+
+.boothTitle {
+    color: white;
+    font-size: 1.5rem;
+}
+
+.boothTime {
+    color: white;
+    font-size: 1.25rem;
+}
+
+.boothDescription {
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+}
+
+#boothInfo {
+    display: flex;
+    flex-direction: column;
+    gap: 2rem;
+    margin-top: 2rem;
+}
+
+.tickets {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.tickets a {
+    text-decoration: none;
+    color: black;
+}
+
+.ticket-btn {
+    width: fit-content;
+    font-size: 1.25rem;
+    cursor: pointer;
+}
+
+.ticket-btn:hover {
+    background-color: #D9D9D9;
+}
+
+.share {
+    display: flex;
+    flex-direction: row;
+    gap: 12px;
+    height: 100%;
+    width: auto;
+    transition: rotate 0.3s ease;
+    cursor: pointer;
+}
+
+.share img:hover {
+    opacity: 90%;
+    rotate: calc(10deg);
+    transition: rotate 0.3s ease;
+}
+
+/* Register Prompt */
+
+#arrow {
+    margin-left: .25rem;
 }
 
 @media (max-width: 1024px) {
