--- a/yorku/desn3005/siaff/style.css
+++ b/yorku/desn3005/siaff/style.css
@@ -39,6 +39,7 @@
 }
 
 .nav-links a {
+    padding-top: .35rem;
     text-decoration: none;
     color: #ffffff;
     font-size: 1.25rem;
@@ -88,6 +89,7 @@
     display: flex;
     justify-content: center;
     background-image: url(media/gridBackground.png);
+    background-color: #000000;
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
@@ -183,12 +185,12 @@
   transition: padding 0.05s linear;
 }
 
-#hero-center h3 {
+#hero-center h2 {
   font-size: 0px;
   transition: font-size 0.05s linear;
 }
 
-#hero-side {
+.hero-side {
     display: flex;
     flex-direction: column;
     gap: 2rem;
@@ -199,7 +201,7 @@
 }
 
 
-#hero-center h3 {
+#hero-center h2 {
     color: white;
     font-size: 3rem;
     white-space: nowrap;   
@@ -236,18 +238,20 @@
 /*main section*/
 
 #mainContent {
-  position: absolute;  
-  width: 100%;
+  position: relative;
 }
 
 /*festival description*/
 
 #festivalDescription {
-    background-color: #1B1BFF;
     height: 300vh;
 }
 
-#descContainer {
+.box-Container {
+    background-color: #1B1BFF;
+}
+
+.box-Section {
     position: sticky;
     top: 0;
 
@@ -257,18 +261,18 @@
     align-items: center;
 }
 
-#desc-gap {
+.box-gap {
     width: 100%;
     flex: .75;
 }
 
-#descImage {
+.boxImage {
     height: 100%;
     width: auto;
     flex: 1.5;
 }
 
-#descImage img {
+.boxImage img {
     width: 100%;
 }
 
@@ -283,7 +287,7 @@
   transform: translateY(0) scale(1);
 }
 
-#descTxt {
+.box-txt {
     flex: 1.2;
     color: white;
     display: flex;
@@ -291,36 +295,41 @@
     gap: 3rem;
 }
 
-#descTxt h1 {
+.box-txt h2 {
     font-size: 2.5rem;
 }
 
-#descTxt p {
+.box-txt p {
     font-size: 1.25rem;
-    text-align: justify;
 }
 
 #btn-style1 {
     font-size: 1.25rem;
     color: white;
+    width: fit-content;
 }
 
 #object, #object2, #object3 {
     position: absolute;
-    width: 100%;
+    width: fit-content;
 }
 
 #object img {
     float: right;
     width: 20%;
+    max-width: 20%;
     margin-right: 5%;
 }
 
+#object2 {
+    width: 100%;
+}
+
 #object2 img {
-    float:right;
+    float: right;
     margin-top: 5rem;
     width: 10%;
-    z-index: 5;
+    max-width: 10%;
 }
 
 /*festival description*/
@@ -349,7 +358,6 @@
 #awardParagraph {
     color: white;
     font-size: 1.25rem;
-    text-align: justify;
 }
 
 #award-margins {
@@ -380,7 +388,7 @@
 
 #award-right {
     display: flex;
-    flex-direction: column;    
+    flex-direction: column;   
     gap: 40vh;
 }
 
@@ -405,8 +413,9 @@
     color: white;
     text-align: right;
     align-items: flex-end;
-    justify-content: flex-end;
     text-decoration: none;
+    justify-content: flex-end; 
+    align-self: right;
     gap: 1rem;
 }
 
@@ -414,10 +423,17 @@
     width: 50%;
 }
 
-.qrCode img {
+.qrCode a {
     width: 30%;
+    display: inline-block;
     padding: .25rem;
-    border: #1B1BFF 2px solid;
+    border: #1B1BFF 2px solid;    
+}
+
+.qrCode a img {
+    display: block;
+    width: 100%;
+    height: auto;
 }
 
 #btn-style2 {
@@ -433,9 +449,9 @@
 }
 
 #object3 img {
-    float:left;
     margin-top: 5rem;
-    width: 15%;
+    width: 35%;
+    max-width: 35%;
     z-index: 5;
 }
 
@@ -539,9 +555,12 @@
 
 #booths {
     background-color: white;
+    height: 300vh;
 }
 
 #boothContainer {
+    position: sticky;
+    top: -12vh; 
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -630,7 +649,6 @@
 .boothParagraph {
     color: white;
     font-size: 1.25rem;
-    text-align: justify;
 }
 
 .boothTitle {
@@ -652,7 +670,7 @@
 #boothInfo {
     display: flex;
     flex-direction: column;
-    gap: 2rem;
+    gap: 2.5rem;
     margin-top: 2rem;
 }
 
@@ -682,13 +700,25 @@
     display: flex;
     flex-direction: row;
     gap: 12px;
-    height: 100%;
-    width: auto;
-    transition: rotate 0.3s ease;
-    cursor: pointer;
 }
 
-.share img:hover {
+.share button {
+    background: none;
+    border: none; 
+    padding: 0;
+    cursor: pointer;  
+    display: inline-flex;  
+    align-items: center;
+}
+
+.share-btn img {
+    height: 100%;
+    width: auto;
+    cursor: pointer;    
+    transition: rotate 0.3s ease;
+}
+
+.share-btn img:hover {
     opacity: 90%;
     rotate: calc(10deg);
     transition: rotate 0.3s ease;
@@ -696,8 +726,89 @@
 
 /* Register Prompt */
 
+#points {
+    display: flex;
+    flex-direction: column;
+    gap: 2rem;    
+}
+
+#festival-list {
+    font-size: 1.25rem;
+    display: flex;
+    flex-direction: column;
+    gap: 2rem;
+    padding-left: 5%;
+}
+
 #arrow {
     margin-left: .25rem;
+}
+
+#register-container {
+    height: 250vh;
+}
+
+#register-section {
+    position: sticky;
+    top: 10vh;
+}
+
+/* footer */
+
+footer { 
+    width: 100%;
+}
+
+#footer-background {
+    background-color: #000000;
+    background-image: url(media/gridBackground_plain.png);       
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: top;    
+    z-index: 5;
+}
+
+#footerContainer {
+    display: flex;
+    flex-direction: row;
+    align-items: top;
+    justify-content: space-between;
+}
+
+#footer-header {
+    display: flex;
+    flex-direction: column;
+    gap: 3rem;
+}
+
+#footer-right {
+    display: flex;
+    flex-direction: row;
+    gap: 1.5rem;
+    align-items: center;
+}
+
+#footer-site-information {
+    display: flex;
+    flex-direction: column;
+    text-align: right;
+    gap: 2.5rem;
+    font-size: 1.25rem;
+    color: white;
+}
+
+#footer-spacer {
+    margin-bottom: 70vh;
+    width: 1px;
+    z-index: -2;
+}
+
+#map-container {
+   position: fixed;
+    bottom: 0;
+    width: 100%;
+    height: 70vh;
+    z-index: -1;
 }
 
 @media (max-width: 1024px) {
