--- a/yorku/desn3005/siaff/text-styling.css
+++ b/yorku/desn3005/siaff/text-styling.css
@@ -1,5 +1,17 @@
 @import url('fonts/stylesheet.css');
 
+.visually-hidden {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  padding: 0;
+  margin: -1px;
+  overflow: hidden;
+  clip: rect(0, 0, 0, 0);
+  white-space: nowrap;
+  border: 0;
+}
+
 .marginProperties {
     margin-left: 8rem;
     margin-right: 8rem;
@@ -68,6 +80,17 @@
     font-weight: normal;
     font-style: normal;
     font-display: swap;    
+}
+
+:focus-visible {
+  outline: 3px solid #FF0000;
+  outline-offset: 4px;
+  border-radius: 4px;
+}
+
+::selection {
+    background: #e22626;
+    color: white;
 }
 
 /* Base styles */
