--- a/yorku/desn3005/siaff/style.css
+++ b/yorku/desn3005/siaff/style.css
@@ -400,6 +400,10 @@
     height: 100%;    
 }
 
+.height100 {
+    height: 100%;
+}
+
 #award-left {
     display: flex;
     flex-direction: column;
