--- a/yorku/desn3005/siaff/style.css
+++ b/yorku/desn3005/siaff/style.css
@@ -1,5 +1,44 @@
 @import url('fonts/stylesheet.css');
 
+.backto-top {
+    position: fixed;
+    background-color: white;
+    border: #000000 2px solid;
+    width: 4rem;
+    height: 4rem;
+    z-index: 15;
+    bottom: 5%;
+    right: 1.5%;    
+    cursor: pointer;
+
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+    box-shadow: 0 2px 10px rgba(0,0,0,0.2);
+    opacity: 0;
+    transform: translateY(20px);
+    pointer-events: none;
+    transition: opacity 0.5s ease, transform 0.5s ease;    
+}
+
+.backto-top.show {
+    opacity: 1;
+    transform: translateY(0); /* move into position */
+    pointer-events: auto;
+}
+
+.backto-top:hover {
+    background-color: #D9D9D9;
+}
+
+.backto-top img {
+    max-width: 120%;
+    max-height: 120%;
+    display: block;    
+}
+
+
 /*nav bar*/
 
 .navigationBar {
@@ -79,7 +118,7 @@
 .lang-group {
     display: flex;
     flex-direction: row;
-    gap: .5rem;
+    gap: .75rem;
 }
 
 .lang-group a {
@@ -92,6 +131,7 @@
     background-color: white;
     border-radius: .5rem;
 }
+
 
 /*main*/
 
@@ -485,8 +525,8 @@
 
 #object3 img {
     margin-top: 5rem;
-    width: 35%;
-    max-width: 35%;
+    width: 40%;
+    max-width: 40%;
     z-index: 5;
 }
 
@@ -1235,6 +1275,15 @@ footer {
     align-items: center;
     justify-content: flex-end;
 }    
+
+#footerContainer {
+    flex-direction: column;
+    gap: 6rem;
+}
+
+#footer-site-information {
+    text-align: left;
+}
 }
 
 
