--- a/yorku/desn3005/siaff-kr/style.css
+++ b/yorku/desn3005/siaff-kr/style.css
@@ -38,6 +38,7 @@
     display: block;    
 }
 
+
 /*nav bar*/
 
 .navigationBar {
@@ -84,7 +85,6 @@
     font-size: 1.25rem;
 }
 
-
 #hamburger a img  {
     height: 2.5rem;
     width: auto;
@@ -128,15 +128,14 @@
 }
 
 .lang-group a {
+    color: black;
     text-decoration: none;
     padding-bottom: .25rem;
-    padding-top: .25rem;
+    padding-top: .3rem;
     padding-left: .5rem;
     padding-right: .5rem;
+    background-color: white;
     border-radius: .5rem;
-    
-    background: white;
-    color: black;
 }
 
 .lang-group a:hover {
@@ -205,19 +204,6 @@
     width: 100%;
 }
 
-#fadetop {
-    width: 100%;
-    height: 10rem;
-    overflow: hidden;
-    position: relative;
-} 
-
-#fadetop img {
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-    display: block;
-} 
 
 #fadebottom {
     display: flex;
@@ -235,7 +221,7 @@
 
 #herocontainer {
     position: sticky;
-    top: 25vh;
+    top: 30vh;
     z-index: 10;
     display: flex;
     flex-direction: row;
@@ -582,7 +568,7 @@
 
 #shopTxt {
     color: white;
-    width: 20%;
+    font-size: 5rem;
 }
 
 .shopGrid {
@@ -632,7 +618,7 @@
 
 #view-more {
     padding: 1rem;
-    padding-top: .75rem;
+    padding-top: 1rem;
     padding-bottom: .75rem;
     margin-top: 1rem;
     background-color: white;
@@ -742,7 +728,7 @@
 #boothheader-right h2 {
     color: white;
     text-align: left;
-    width: 60%;
+    font-size: 4rem;
     white-space: nowrap;
 }
 
@@ -885,11 +871,6 @@ footer {
     gap: 3rem;
 }
 
-#footerH2 {
-    color: white;
-    font-size: 6rem;
-}
-
 #footer-right {
     display: flex;
     flex-direction: row;
@@ -1017,8 +998,7 @@ footer {
 }
 
 #boothheader-right h2 {
-    width: 25%;
-    padding-bottom: 1rem;
+    display: none;
 }
 
 #booth-center {
@@ -1215,10 +1195,6 @@ footer {
     display: none;
 }
 
-#shopTxt {
-    width: 40%;
-}
-
 /* booths */
 
 #booths {
@@ -1332,7 +1308,7 @@ footer {
 }
 
 #heroSection {
-    height: 160vh;
+    height: 115vh;
 }
 
 #herocontainer {
@@ -1615,6 +1591,10 @@ footer {
 }
 
 .shopGrid {
+    width: 100%;
+}
+
+#shopTxt img {
     width: 100%;
 }
 
