--- a/yorku/desn3005/siaff-kr/style.css
+++ b/yorku/desn3005/siaff-kr/style.css
@@ -38,7 +38,6 @@
     display: block;    
 }
 
-
 /*nav bar*/
 
 .navigationBar {
@@ -85,6 +84,7 @@
     font-size: 1.25rem;
 }
 
+
 #hamburger a img  {
     height: 2.5rem;
     width: auto;
@@ -128,14 +128,15 @@
 }
 
 .lang-group a {
-    color: black;
     text-decoration: none;
     padding-bottom: .25rem;
-    padding-top: .3rem;
+    padding-top: .25rem;
     padding-left: .5rem;
     padding-right: .5rem;
-    background-color: white;
     border-radius: .5rem;
+    
+    background: white;
+    color: black;
 }
 
 .lang-group a:hover {
@@ -204,6 +205,19 @@
     width: 100%;
 }
 
+#fadetop {
+    width: 100%;
+    height: 10rem;
+    overflow: hidden;
+    position: relative;
+} 
+
+#fadetop img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    display: block;
+} 
 
 #fadebottom {
     display: flex;
@@ -221,7 +235,7 @@
 
 #herocontainer {
     position: sticky;
-    top: 30vh;
+    top: 25vh;
     z-index: 10;
     display: flex;
     flex-direction: row;
@@ -568,7 +582,7 @@
 
 #shopTxt {
     color: white;
-    font-size: 5rem;
+    width: 20%;
 }
 
 .shopGrid {
@@ -618,7 +632,7 @@
 
 #view-more {
     padding: 1rem;
-    padding-top: 1rem;
+    padding-top: .75rem;
     padding-bottom: .75rem;
     margin-top: 1rem;
     background-color: white;
@@ -728,7 +742,7 @@
 #boothheader-right h2 {
     color: white;
     text-align: left;
-    font-size: 4rem;
+    width: 60%;
     white-space: nowrap;
 }
 
@@ -871,6 +885,11 @@ footer {
     gap: 3rem;
 }
 
+#footerH2 {
+    color: white;
+    font-size: 6rem;
+}
+
 #footer-right {
     display: flex;
     flex-direction: row;
@@ -998,7 +1017,8 @@ footer {
 }
 
 #boothheader-right h2 {
-    display: none;
+    width: 25%;
+    padding-bottom: 1rem;
 }
 
 #booth-center {
@@ -1193,6 +1213,10 @@ footer {
 
 #award-right {
     display: none;
+}
+
+#shopTxt {
+    width: 40%;
 }
 
 /* booths */
@@ -1591,10 +1615,6 @@ footer {
 }
 
 .shopGrid {
-    width: 100%;
-}
-
-#shopTxt img {
     width: 100%;
 }
 
