--- a/artofvisualdata-typeface/artofvisualdata-typeface.css
+++ b/artofvisualdata-typeface/artofvisualdata-typeface.css
@@ -1,4 +1,5 @@
 @import url('../portfolioStyles/fontcss.css');
+@import url('aovd-fonts/stylesheet.css');
 
 
 /* Start styling here */
@@ -242,7 +243,141 @@
   border-radius: 1rem;
 }
 
+.test-container {
+  align-items: center;
+}
 
+.setting-container {
+  display: flex;
+  flex-direction: column;
+  gap: 2rem;
+}
+
+.font-setting {
+  display: flex;
+  gap: 1rem;
+  flex-wrap: wrap;
+}
+
+.c-font-setting {
+  display: flex;
+  gap: .5rem;
+  flex-wrap: wrap;
+}
+
+.option, .s-option {
+  padding-top: .75rem;
+  padding-bottom: .75rem;
+  padding-left: 1.25rem;
+  padding-right: 1.25rem;
+  border-radius: 1rem;
+  border: #A3A19E 1px solid;
+  background-color: transparent;
+  color: #A3A19E;
+
+  transition: background-color 0.3s ease-out;
+  cursor: pointer;
+}
+
+.option:hover, .s-option:hover {
+  background-color: rgb(50, 50, 50);
+  opacity: 100%;  
+}
+
+.font-selected {
+  background-color: white;
+  color: black;
+}
+
+.font-size-selected {
+  background-color: white;
+  color: black;  
+}
+
+.font-selection {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+}
+
+.c-option {
+  padding: 1.5rem;
+  border-radius: 3rem;
+  border: 2px black solid;
+  transition: opacity 0.25s ease-out;
+
+  cursor: pointer;
+}
+
+.c-option:hover {
+  opacity: 70%;
+}
+
+.c-selected {
+  border: 2px #FC78CE solid;
+}
+
+.c-black {
+  background-color: black;
+  color: black;
+}
+
+.c-brown {
+  background-color: #7A5F56;
+  color: #7A5F56;
+}
+
+.c-yellow {
+  background-color: #DDC177;
+  color: #DDC177;
+}
+
+.c-green {
+  background-color: #5EA390;
+  color: #5EA390;
+}
+
+.c-blue {
+  background-color: #65A2BE;
+  color: #65A2BE;
+}
+
+.c-red {
+  background-color: #D0697E;
+  color: #D0697E;
+}
+
+.page-container {
+  position: relative;
+  display: inline-block;
+}
+
+.page-text {
+  position: absolute;
+  height: 100%;
+  width: 100%;
+}
+
+.page-text-container {
+  margin-top: 18.5%;
+  margin-left: 12.5%;
+  margin-right: 12.5%;
+  margin-bottom: 5%;
+  width: 75%;
+  height: 66.5%;  
+}
+
+.page-text-input {
+  width: 100%;
+  height: 100%;
+
+  text-rendering: geometricPrecision;
+  font: inherit;
+  background-color: transparent;
+  border: transparent;
+  outline: none;
+  resize: none;
+}
 
 /* Image link focus (keyboard accessible) */
 .img-link:focus {
@@ -409,6 +544,8 @@ body {
     -moz-osx-font-smoothing: grayscale;
     text-rendering: optimizeLegibility;
 }
+
+
 
 /* Footer */
 
