--- a/artofvisualdata-typeface/artofvisualdata-typeface.css
+++ b/artofvisualdata-typeface/artofvisualdata-typeface.css
@@ -243,6 +243,53 @@
   border-radius: 1rem;
 }
 
+.systems-content {
+  display: flex;
+  flex-direction: column;
+  gap: 4.5rem;
+}
+
+.packaging-center {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: .5rem;
+}
+
+.customGrid {
+  display: grid;
+  grid-template-columns: 2fr 1fr;
+  grid-template-rows: auto auto;
+  gap: 1rem;
+  align-items: stretch;
+}
+
+.customGrid .gridItem:nth-child(1) {
+  grid-row: 1 / span 2; /* tall left image */
+  grid-column: 1 / 2;
+}
+
+.customGrid .gridItem:nth-child(2) {
+  grid-row: 1 / 2;
+  grid-column: 2 / 3;
+}
+
+.customGrid .gridItem:nth-child(3) {
+  grid-row: 2 / 3;
+  grid-column: 2 / 3;
+}
+
+.customGrid img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  border-radius: 1rem;
+  display: block;
+}
+
+
+
+
 .test-container {
   align-items: center;
 }
@@ -359,7 +406,7 @@
 }
 
 .page-text-container {
-  margin-top: 18.5%;
+  margin-top: 20%;
   margin-left: 12.5%;
   margin-right: 12.5%;
   margin-bottom: 5%;
@@ -378,6 +425,51 @@
   outline: none;
   resize: none;
 }
+
+/* Conclusion */
+
+.learnings {
+  display: flex;
+  flex-direction: row;
+  gap: 2rem;
+}
+
+.learnings h4 {
+  padding: 1rem;
+}
+
+.learnHead {
+  position: sticky;
+  top: 20rem;
+  display: flex;
+  border: #FFFFFF 1px solid;
+  border-radius: 1rem;
+  flex: 1;
+  height: 100%;
+  padding-left: 1rem;
+  align-items: center;
+}
+
+.learnHead img {
+  width: 2rem;
+  height: 2rem;
+}
+
+.learnings ul {
+  display: flex;
+  flex-direction: column;
+  list-style: none;
+  gap: 1rem;
+  flex: 1;
+}
+
+.learnings li {
+  padding: 1rem;
+  border: #FFFFFF 1px solid;
+  border-radius: .5rem;
+}
+
+
 
 /* Image link focus (keyboard accessible) */
 .img-link:focus {
