--- a/artofvisualdata-typeface/basicstyling.css
+++ b/artofvisualdata-typeface/basicstyling.css
@@ -18,9 +18,16 @@
     color: #1E2022;
 }
 
+.border-smooth {
+    border-radius: 1rem;
+}
+
 .line-gap {
     margin-top: 2.5rem;
     margin-bottom: 1.5rem;
+}
+.smallest-gap {
+    margin-top: 1rem;
 }
 
 .smaller-gap {
@@ -89,6 +96,11 @@
 .text-and-image {
     display: flex;
     flex-direction: row;
+    
+}
+
+.layout-center {
+    align-items: center;
 }
 
 .image-flex-1 {
@@ -113,6 +125,49 @@
 }
 
 /* end */
+
+/* text and image styling no 2*/
+
+.v2-text-and-image {
+    display: flex;
+    flex-direction: row;
+}
+
+.v2-image-flex-1 {
+    flex: 1.15;
+
+    display: flex;
+    width: auto;
+    align-items: stretch; 
+    border-radius: 1rem;   
+}
+
+.v2-text-flex-1 {
+    flex: .85;
+
+    display: flex;
+    flex-direction: column;
+    gap: 2rem;
+}
+
+.v2-text-and-image-gap {
+    flex: .1;
+}
+
+/* end */
+
+
+/* img and img styling*/
+
+.two-images {
+    display: flex;
+    flex-direction: row;
+    gap: 1rem;
+}
+
+/* end */
+
+
 
 /* search bar styling */
 
