--- a/artofvisualdata-typeface/basicstyling.css
+++ b/artofvisualdata-typeface/basicstyling.css
@@ -58,10 +58,6 @@
     margin-top: 11rem;
 }
 
-.large-padding {
-    padding-top: 11rem;
-}
-
 .larger-gap {
     margin-top: 16rem;
 }
@@ -186,3 +182,105 @@
 }
 
 /* end */
+
+/* typewriter effect */
+.cursor-blink::after {
+  content: "";
+  margin-left: .5rem;
+  transform: translateY(0.25rem);
+  width: .25rem;
+  height: 2rem;
+  background: #EFEAE4;
+  display: inline-block;
+}
+
+@keyframes cursor-blink {
+  0% {
+    opacity: 0;
+  }
+  50% {
+    opacity: 1;
+  }
+  100% {
+    opacity: 0;
+  }
+}
+
+.cursor-blink::after {
+    animation: cursor-blink 1.5s ease-in-out infinite;
+}
+
+
+/* table of contents */
+
+.table-of-contents {
+  position: fixed;
+  top: 50%;
+  left: 0;
+  transform: translateY(-50%);
+
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+
+  z-index: 10;
+}
+
+.open-button {
+  background-color: #1E2022;
+  width: fit-content;
+  height: fit-content;
+
+  padding-top: 1.5rem;
+  padding-bottom: 1.5rem;
+  padding-left: 0.5rem;
+  padding-right: 0.5rem;
+
+  border-top-right-radius: .5rem;
+  border-bottom-right-radius: .5rem;  
+  
+  cursor: pointer;
+}
+
+.content-links {
+  padding: 1.5rem;
+  background-color: #1E2022;
+
+  transition: transform 0.3s ease;  
+
+  border-top-right-radius: 1rem;
+  border-bottom-right-radius: 1rem;    
+}
+
+.content-links li {
+  list-style: none;
+  cursor: pointer;
+}
+
+.content-links li a {
+  transition: color 0.15s ease-out;
+  text-decoration: none;
+}
+
+.content-links li a:hover {
+  color: #EFEAE4;
+}
+
+.toc-inner {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+
+  transform: translateX(-100%);
+  transition: transform 0.3s ease;
+}
+
+#toc-btn {
+  display: flex;
+  transition: transform 0.3s ease;
+}
+
+#toc-btn.flipped {
+  transform: scaleX(-1);
+}
+
