--- a/artofvisualdata-typeface/artofvisualdata-typeface.css
+++ b/artofvisualdata-typeface/artofvisualdata-typeface.css
@@ -645,9 +645,6 @@ list-style: none;
     display: flex;
     justify-content: space-between;
     align-items: center;
-    margin-left: 15rem !important;
-    margin-right: 13rem !important;
-    margin-inline: auto;
     padding-top: 1.75rem;
     padding-bottom: 1rem;
     max-width: none;
@@ -742,8 +739,6 @@ body {
   margin-inline: auto;
   display: flex;
   justify-content: space-between;
-    margin-left: 15rem;
-    margin-right: 14.5rem;
     padding-top: 3rem;
     padding-bottom: 3.5rem;
     font-size: 1.25rem;
@@ -819,4 +814,83 @@ body {
   animation-name: fadeInUpCustom;
   animation-duration: 1s;
   animation-fill-mode: forwards; /* keeps final state after animation */
+}
+
+
+@media (max-width: 780px) {
+  .logo {
+    display: none;
+  }
+
+  .nav-links {
+    flex: 1;
+  }
+
+  .nav-links ul {
+  justify-content: space-between;
+  }
+
+  .siteInfo {
+    font-size: 1rem;
+  }
+}
+
+@media (max-width: 540px) {
+  .nav-links a {
+    padding: .25rem 1rem;
+  }
+
+  .siteInfo {
+    flex-direction: column;
+  }
+
+  .scrollIndicator {
+    margin-right: 0;
+    width: 1.5rem;
+    height: 3rem;
+  }
+
+  .point-flexbox, .project-info, .introHeading, .inspiration-review {
+    position: relative;
+    flex-direction: column;
+    gap: 1rem;
+    align-items: flex-start !important;
+  }
+
+  .learnings {
+    flex-direction: column;
+  }
+
+  .learnHead {
+    position: relative;
+    top: 0;
+  }
+
+  .quote {
+    padding-top: 10rem;
+    padding-bottom: 10rem;
+  }
+
+  .quote-content blockquote {
+    width: 80%;
+  }
+  .quote-container {
+    gap: 3rem;
+  }
+
+
+  .tags {
+    display: none;
+  }
+
+  .poro {
+    display: none;
+  }
+}
+
+@media (max-width: 425px) {
+
+  .vine-title img {
+    display: none;
+  }
 }
