--- a/artofvisualdata-typeface/basicstyling.css
+++ b/artofvisualdata-typeface/basicstyling.css
@@ -227,7 +227,7 @@
 }
 
 .open-button {
-  background-color: #1E2022;
+  background-color: #1e2022d2;
   width: fit-content;
   height: fit-content;
 
@@ -284,3 +284,94 @@
   transform: scaleX(-1);
 }
 
+.mobile-format {
+  display: none;
+}
+
+
+
+@media (max-width: 1024px) {
+
+.margins {
+    margin-left: 8rem;
+    margin-right: 8rem;  
+} 
+
+.line-gap {
+    margin-top: 2rem;
+    margin-bottom: 1.5rem;
+}
+
+.smallest-gap {
+    margin-top: 1rem;
+}
+
+.smaller-gap {
+    margin-top: 1.5rem;
+}
+
+.small-gap {
+    margin-top: 1rem;
+}
+
+.lighter-gap {
+    margin-top: 1.5rem;
+}
+
+.light-gap {
+    margin-top: 2rem;
+}
+
+.regular-gap {
+    margin-top: 3rem;
+}
+
+.medium-gap {
+    margin-top: 6rem;
+}
+
+.large-gap {
+    margin-top: 8rem;
+}
+
+.larger-gap {
+    margin-top: 10rem;
+}
+
+.align-bottom {
+    display: flex;
+    align-items: flex-end;
+}
+
+}
+
+@media (max-width: 780px) {
+  .margins {
+      margin-left: .5rem;
+      margin-right: .5rem;  
+  }   
+}
+
+@media (max-width: 540px) {
+
+  .desktop-format {
+    display: none;
+  }
+  .mobile-format {
+    display: block;
+  }
+
+  .text-and-image, .v2-text-and-image {
+      flex-direction: column;
+      gap: 1rem;
+  }
+
+
+  .large-gap {
+      margin-top: 6rem;
+  }
+
+  .larger-gap {
+      margin-top: 8rem;
+  }  
+}
