--- a/artofvisualdata-typeface/fontsettings.css
+++ b/artofvisualdata-typeface/fontsettings.css
@@ -109,3 +109,63 @@
     width: 100%;
 }
 
+@media (max-width: 1024px) {
+
+.largeType {
+    font-size: 2rem;
+}
+
+.largerType {
+    font-size: 2.5rem;
+}
+
+.customLarge {
+    font-size: 5rem;
+}
+
+.demiType {
+    font-size: 2rem;
+}
+
+.mediumType {
+    font-size: 2.25rem;
+}
+
+.semi-mediumType {
+    font-size: 2rem;
+}
+
+.regularType {
+    font-size: 1.15rem;
+} 
+
+.smallType {
+    font-size: 1rem;
+}
+
+.smallerType {
+    font-size: 1.15rem;
+}    
+
+}
+
+@media (max-width: 540px) {
+
+.largeType {
+    font-size: 2.5rem;
+}
+
+.largerType {
+    font-size: 2.5rem;
+}
+
+.regularType {
+    font-size: 1.25rem;
+} 
+
+.semi-mediumType {
+    font-size: 1.75rem;
+}
+
+}
+
