--- a/artofvisualdata/basicstyling.css
+++ b/artofvisualdata/basicstyling.css
@@ -227,7 +227,7 @@
 }
 
 .open-button {
-  background-color: #1E2022;
+  background-color: #1e2022d2;
   width: fit-content;
   height: fit-content;
 
